<?xml version="1.0"?>
<package>
  <name>obj_state_msgs</name>
  <version>1.1.5</version>
  <description>Object states.</description>
  <license>BSD</license>
  <maintainer email="minghao0@connect.hku.hk">Michael</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
